// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/Forms/Fields/Checkbox Default smoke-test 1`] = `
<div class="flex space-x-2">
  <button type="button"
          role="checkbox"
          aria-checked="false"
          data-state="unchecked"
          value="on"
          class="peer h-4 w-4 shrink-0 rounded-sm border border-primary shadow focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
          id="terms"
  >
  </button>
  <label for="terms"
         class="font-medium text-sm leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
  >
    Accept terms and conditions
  </label>
</div>
`;

exports[`Design System/Forms/Fields/Checkbox Disabled smoke-test 1`] = `
<div class="flex space-x-2">
  <button type="button"
          role="checkbox"
          aria-checked="false"
          data-state="unchecked"
          data-disabled
          disabled
          value="on"
          class="peer h-4 w-4 shrink-0 rounded-sm border border-primary shadow focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
          id="disabled-terms"
  >
  </button>
  <label for="disabled-terms"
         class="font-medium text-sm leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-50"
  >
    Accept terms and conditions
  </label>
</div>
`;
